# VSCodeWithCMake

./: CMakeLists.txt  main.cpp  readme.md
